--- a/bio.html
+++ b/bio.html
@@ -12,13 +12,12 @@
 <body>
 
 <p>Luca Trevisan is 
-a professor of electrical engineering and computer science at U.C. Berkeley and
-a senior scientist at the Simons Institute for the Theory of Computing.
+a professor of computer science at Bocconi University.
 Luca received his Dottorato (PhD) in 1997,
 from the <i>Sapienza</i> University of Rome, working with Pierluigi Crescenzi.
 After graduating, Luca was a post-doc at MIT and at DIMACS, and he was
 on the faculty of Columbia University, U.C. Berkeley, and Stanford, before
-returning to Berkeley in 2014.
+returning to Berkeley in 2014 and, at long last, returning to Italy in 2019.
 
 
 <p>Luca's research is in theoretical computer science, and most of his work has
