--- a/bio.html
+++ b/bio.html
@@ -33,7 +33,7 @@ Oberwolfach Prize</a>, and
  the <a href="http://www.sloan.org/sloan-research-fellowships/">2000
 Sloan Fellowship</a>.
 He was an invited speaker at <a href="http://www.icm2006.org/">the 2006 International Congress of Mathematicians</a>
-in Madrid. </p>
+in Madrid. In 2019, he received an ERC Advanced Grant. </p>
 
 
 <p>
