--- a/bio.html
+++ b/bio.html
@@ -20,20 +20,15 @@ on the faculty of Columbia University, U.C. Berkeley, and Stanford, before
 returning to Berkeley in 2014 and, at long last, returning to Italy in 2019.
 
 
-<p>Luca's research is in theoretical computer science, and most of his work has
-been in two areas: (i) pseudo-randomness and its relation to average-case complexity
-and derandomization; and (ii) the theory of probabilistically
-checkable proofs and its relation to the approximability of combinatorial
-optimization problems. Lately, he has been working on spectral graph theory and its applications to graph algorithms.</p>
+<p>Luca's research is in theoretical computer science, with a focus on computational complexity, on the analysis of algorithms, and on the foundations of cryptography.</p>
 
 <p>Luca received the <a href="http://www.sigact.org/Prizes/Student/">STOC'97
 Danny Lewin (best student paper) award</a>,
 the <a href="http://www.mfo.de/math-in-public/prizes/oberwolfach-prize/prizes-1/">2000
-Oberwolfach Prize</a>, and
+Oberwolfach Prize</a>,
  the <a href="http://www.sloan.org/sloan-research-fellowships/">2000
-Sloan Fellowship</a>.
-He was an invited speaker at <a href="http://www.icm2006.org/">the 2006 International Congress of Mathematicians</a>
-in Madrid. In 2019, he received an ERC Advanced Grant. </p>
+Sloan Fellowship</a> and an NSF CAREER Award.
+He was an invited speaker at <a href="http://www.icm2006.org/">the 2006 International Congress of Mathematicians</a>. In 2019, he received an ERC Advanced Grant. </p>
 
 
 <p>
