--- a/bio.html
+++ b/bio.html
@@ -20,7 +20,7 @@ on the faculty of Columbia University, U.C. Berkeley, and Stanford, before
 returning to Berkeley in 2014 and, at long last, returning to Italy in 2019.
 
 
-<p>Luca's research is in theoretical computer science, with a focus on computational complexity, on the analysis of algorithms, and on the foundations of cryptography.</p>
+<p>Luca's research is in theoretical computer science, with a focus on computational complexity, on the analysis of algorithms,  on the foundations of cryptography, and on topics at the intersection of theoretical computer science and pure mathematics.</p>
 
 <p>Luca received the <a href="http://www.sigact.org/Prizes/Student/">STOC'97
 Danny Lewin (best student paper) award</a>,
