--- a/bio.html
+++ b/bio.html
@@ -22,7 +22,7 @@ returning to Berkeley in 2014 and, at long last, returning to Italy in 2019.
 
 <p>Luca's research is in theoretical computer science, with a focus on computational complexity, on the analysis of algorithms,  on the foundations of cryptography, and on topics at the intersection of theoretical computer science and pure mathematics.</p>
 
-<p>Luca received the <a href="http://www.sigact.org/Prizes/Student/">STOC'97
+<p>Luca is a Fellow of the ACM. He received the <a href="http://www.sigact.org/Prizes/Student/">STOC'97
 Danny Lewin (best student paper) award</a>,
 the <a href="http://www.mfo.de/math-in-public/prizes/oberwolfach-prize/prizes-1/">2000
 Oberwolfach Prize</a>,
