--- a/bio.html
+++ b/bio.html
@@ -12,7 +12,7 @@
 <body>
 
 <p>Luca Trevisan is 
-a professor of computer science at Bocconi University.
+a professor of computer science at Bocconi University, where he holds the Fondazione Invernizzi Chair in Computer Science.
 Luca received his Dottorato (PhD) in 1997,
 from the <i>Sapienza</i> University of Rome, working with Pierluigi Crescenzi.
 After graduating, Luca was a post-doc at MIT and at DIMACS, and he was
@@ -22,11 +22,11 @@ returning to Berkeley in 2014 and, at long last, returning to Italy in 2019.
 
 <p>Luca's research is in theoretical computer science, with a focus on computational complexity, on the analysis of algorithms,  on the foundations of cryptography, and on topics at the intersection of theoretical computer science and pure mathematics.</p>
 
-<p>Luca is a Fellow of the ACM. He received the  <a href="http://www.mfo.de/math-in-public/prizes/oberwolfach-prize/prizes-1/">2000
+<p>Luca is a <a href=https://awards.acm.org/fellows>Fellow of the ACM</a> and a member of the <a href=https://en.wikipedia.org/wiki/Accademia_nazionale_delle_scienze>Accademia dei XL</a>, Italy's national academy of science. He received the  <a href="http://www.mfo.de/math-in-public/prizes/oberwolfach-prize/prizes-1/">2000
 Oberwolfach Prize</a>,
  the <a href="http://www.sloan.org/sloan-research-fellowships/">2000
 Sloan Fellowship</a> and an NSF CAREER Award.
-He was an invited speaker at <a href="http://www.icm2006.org/">the 2006 International Congress of Mathematicians</a>. In 2019, he received an ERC Advanced Grant. </p>
+He was an invited speaker at the 2006 International Congress of Mathematicians. In 2019, he received an ERC Advanced Grant.</p>
 
 
 <p>
